--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,7 +35,7 @@
                 android:background="@drawable/red_border"
                 android:backgroundTint="#202020"
                 android:backgroundTintMode="add"
-                android:hint="Enter a build name"
+                android:hint="@string/BUILD_NAME_H"
                 android:padding="10dp"
                 android:textColor="#FFFFFF"
                 android:textColorHint="#555555"
@@ -76,7 +76,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:layout_marginStart="4dp"
-                            android:text="Motherboard: "
+                            android:text="@string/MB"
                             android:textColor="#FFFFFF"
                             android:textSize="25sp"
                             android:textStyle="bold"
@@ -114,7 +114,7 @@
                             android:paddingTop="2dp"
                             android:paddingRight="2dp"
                             android:paddingBottom="2dp"
-                            android:text="Add +"
+                            android:text="@string/ADD"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="14sp"
@@ -153,7 +153,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:fontFamily="@font/anta"
-                            android:text="Cost:"
+                            android:text="@string/COST"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
@@ -225,7 +225,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:layout_marginStart="4dp"
-                            android:text="Processor:"
+                            android:text="@string/CPU"
                             android:textColor="#FFFFFF"
                             android:textSize="25sp"
                             android:textStyle="bold"
@@ -260,7 +260,7 @@
                             android:paddingLeft="2dp"
                             android:paddingRight="2dp"
                             android:paddingBottom="2dp"
-                            android:text="Add +"
+                            android:text="@string/ADD"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="14sp"
@@ -298,7 +298,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:fontFamily="@font/anta"
-                            android:text="Cost:"
+                            android:text="@string/COST"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
@@ -370,7 +370,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:layout_marginStart="4dp"
-                            android:text="Graphics Card:"
+                            android:text="@string/GPU"
                             android:textColor="#FFFFFF"
                             android:textSize="25sp"
                             android:textStyle="bold"
@@ -405,7 +405,7 @@
                             android:paddingLeft="2dp"
                             android:paddingRight="2dp"
                             android:paddingBottom="2dp"
-                            android:text="Add +"
+                            android:text="@string/ADD"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="14sp"
@@ -443,7 +443,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:fontFamily="@font/anta"
-                            android:text="Cost:"
+                            android:text="@string/COST"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
@@ -515,7 +515,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:layout_marginStart="4dp"
-                            android:text="RAM Memory:"
+                            android:text="@string/RAM"
                             android:textColor="#FFFFFF"
                             android:textSize="25sp"
                             android:textStyle="bold"
@@ -550,7 +550,7 @@
                             android:paddingLeft="2dp"
                             android:paddingRight="2dp"
                             android:paddingBottom="2dp"
-                            android:text="Add +"
+                            android:text="@string/ADD"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="14sp"
@@ -588,7 +588,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:fontFamily="@font/anta"
-                            android:text="Cost:"
+                            android:text="@string/COST"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
@@ -660,7 +660,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:layout_marginStart="4dp"
-                            android:text="Cooling:"
+                            android:text="@string/COOL"
                             android:textColor="#FFFFFF"
                             android:textSize="25sp"
                             android:textStyle="bold"
@@ -695,7 +695,7 @@
                             android:paddingLeft="2dp"
                             android:paddingRight="2dp"
                             android:paddingBottom="2dp"
-                            android:text="Add +"
+                            android:text="@string/ADD"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="14sp"
@@ -733,7 +733,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:fontFamily="@font/anta"
-                            android:text="Cost:"
+                            android:text="@string/COST"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
@@ -805,7 +805,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:layout_marginStart="4dp"
-                            android:text="Storage:"
+                            android:text="@string/DISK"
                             android:textColor="#FFFFFF"
                             android:textSize="25sp"
                             android:textStyle="bold"
@@ -840,7 +840,7 @@
                             android:paddingLeft="2dp"
                             android:paddingRight="2dp"
                             android:paddingBottom="2dp"
-                            android:text="Add +"
+                            android:text="@string/ADD"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="14sp"
@@ -878,7 +878,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:fontFamily="@font/anta"
-                            android:text="Cost:"
+                            android:text="@string/COST"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
@@ -950,7 +950,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:layout_marginStart="4dp"
-                            android:text="Case:"
+                            android:text="@string/CASE"
                             android:textColor="#FFFFFF"
                             android:textSize="25sp"
                             android:textStyle="bold"
@@ -985,7 +985,7 @@
                             android:paddingLeft="2dp"
                             android:paddingRight="2dp"
                             android:paddingBottom="2dp"
-                            android:text="Add +"
+                            android:text="@string/ADD"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="14sp"
@@ -1023,7 +1023,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:fontFamily="@font/anta"
-                            android:text="Cost:"
+                            android:text="@string/COST"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
@@ -1095,7 +1095,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:layout_marginStart="4dp"
-                            android:text="Power:"
+                            android:text="@string/BP"
                             android:textColor="#FFFFFF"
                             android:textSize="25sp"
                             android:textStyle="bold"
@@ -1131,7 +1131,7 @@
                             android:paddingLeft="2dp"
                             android:paddingRight="2dp"
                             android:paddingBottom="2dp"
-                            android:text="Add +"
+                            android:text="@string/ADD"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="14sp"
@@ -1169,7 +1169,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:fontFamily="@font/anta"
-                            android:text="Cost:"
+                            android:text="@string/COST"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
@@ -1225,7 +1225,9 @@
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:backgroundTint="#FD6635"
-                    android:text="Add +" />
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/ADD_BOTT" />
 
                 <Button
                     android:id="@+id/SB"
@@ -1234,7 +1236,9 @@
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:backgroundTint="#FD6635"
-                    android:text="Save" />
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/SAVE" />
 
                 <Button
                     android:id="@+id/export"
@@ -1243,7 +1247,8 @@
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:backgroundTint="#FD6635"
-                    android:text="Export" />
+                    android:padding="0dp"
+                    android:text="@string/EXP" />
             </LinearLayout>
 
             <!-- Блок Graphics Card -->
