--- a/app/src/main/res/layout/app_bar_note2.xml
+++ b/app/src/main/res/layout/app_bar_note2.xml
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="PC Note"
+                android:text="@string/TXT_11"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/addIcon2"
