--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -8,13 +8,6 @@
     android:background="@drawable/bg2"
     tools:ignore="ExtraText"><![CDATA[
     tools:context=".ui.gallery.GalleryFragment">
-
-
-
-
-
-
-
     ]]>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -84,7 +77,7 @@
             android:ems="10"
             android:fontFamily="@font/anta"
             android:gravity="center"
-            android:hint="Build name"
+            android:hint="@string/BUILD_NAME_H"
             android:inputType="text"
             android:textColor="#909090"
             android:textColorHint="#909090"
