--- a/app/src/main/res/layout/visualizer_card.xml
+++ b/app/src/main/res/layout/visualizer_card.xml
@@ -51,11 +51,11 @@
                     android:layout_width="34dp"
                     android:layout_height="29dp"
                     android:layout_marginRight="3dp"
-                    android:tint="#FF0000"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/pinclipart_com_link_clip_art_3739847" />
+                    app:srcCompat="@drawable/pinclipart_com_link_clip_art_3739847"
+                    app:tint="#FF0000" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -114,7 +114,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/anta"
-                    android:text="Cost:"
+                    android:text="@string/COST"
                     android:textAllCaps="false"
                     android:textColor="#909090"
                     android:textSize="18sp"
