--- a/app/src/main/res/menu/activity_note2_drawer.xml
+++ b/app/src/main/res/menu/activity_note2_drawer.xml
@@ -7,18 +7,18 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_builder"
-            android:title="Builder" />
+            android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="My notes" />
+            android:title="@string/menu_gallery" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Note viewer" />
+            android:title="@string/menu_slideshow" />
         <item
             android:id="@+id/nav_console"
             android:icon="@drawable/ic_console"
-            android:title="Console" />
+            android:title="@string/menu_console" />
     </group>
 </menu>
