A custom database has been created and connected to the project

--- a/app/src/main/res/menu/activity_note2_drawer.xml
+++ b/app/src/main/res/menu/activity_note2_drawer.xml
@@ -20,5 +20,9 @@
             android:id="@+id/nav_console"
             android:icon="@drawable/ic_console"
             android:title="@string/menu_console" />
+        <item
+            android:id="@+id/nav_crm"
+            android:icon="@drawable/ic_console"
+            android:title="CRM" />
     </group>
 </menu>
